# TEST_Linux_MinGW_CMake

./: .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  main.cpp  toolchain.cmake
environment/: docker_ubuntu.sh  dockerfile  environment.sh
